# AI-Fullstack-Alpha

Backend/: .gitignore  Structural_document.txt
Backend/server/: pom.xml
Backend/server/src/main/resources/: application.properties  data.sql  loginSchema.sql
DB/: Queries.sql
Frontend/: .gitignore  Strutural_document.txt  activate_client
Frontend/Client/: angular.json
Frontend/Client/src/: main.ts  styles.scss
Frontend/Client/src/app/: app.component.ts  app.routes.ts
Frontend/Client/src/app/core/guards/: auth.guard.ts
Frontend/Client/src/app/core/services/: login.service.ts
Frontend/Client/src/app/core/services/login/: login.service.ts
Frontend/Client/src/app/home/: home.component.html
Frontend/Client/src/app/login/normal-login/: normal-login.component.html  normal-login.component.scss  normal-login.component.spec.ts  normal-login.component.ts
Frontend/Client/src/app/login/sso-login/: sso-login.component.spec.ts  sso-login.component.ts
Frontend/Client/src/app/newuser/: newuser.component.html  newuser.component.ts
Frontend/Client/src/app/shared/components/footer/: footer.component.html  footer.component.scss
Frontend/Client/src/app/shared/components/header/: header.component.html  header.component.scss
Frontend/Client/src/environments/: environment.development.ts
Model/: .gitignore  Strucural_document.txt  activate_model
Model/AI/: config.py  evaluate.py  example.py  pyproject.toml  requirements.txt  train.py
Model/virtual_model/: pyvenv.cfg
Model/virtual_model/Scripts/: activate  activate.bat
(+10 files in other folders)
