[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    { name = "sazzycooltehc", email = "aravindsas999@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "html2text",
    "langchain-cohere==0.1.5",
    "langchain-postgres==0.0.6",
    "langchain-community==0.2.4",
    "langchain-experimental==0.0.60",
    "tiktoken==0.7.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
